    - Screen components will word-wrap efficiently.
    - StatusScreens are now colourable using only 12 language strings found in the towny\settings\lang\override\global.yml file.
    - You can even re-colour the title bar.
    - StatusScreenEvents now have the ability to remove components and add components.
      - API-Usage:
        - The existing StatusScreenEvents thrown by Towny will now include their getStatusScreen() method, from which the StatusScreen is accessible and modifiable.
        - ex: event.getStatusScreen().removeStatusComponent(String name); - To remove a StatusComponent from the StatusScreen.
        - ex: event.getStatusScreen().addComponentOf(String name, String text, HoverEvent hover, ClickEvent click); - To add a new StatusComponent to the StatusScreen.
        - ex: event.getStatusScreen().replaceComponent(String name, TextComponent component); - To replace an already existing component with something else.
  - New Command: /n ranklist {nationname}
    - View the ranklist of another nation.
  - New Command: /t ranklist {townname}
    - View the ranklist of another town.
  - New Command: /res tax {resname}
    - View the tax requirements of another resident.
0.97.1.7:
  - Fix ChatTools formatTitle not handling some languages properly on startup.
0.97.1.8:
  - Raise language level to 16 using jabel, courtesy of Warriorrrr with PR #5259.
  - Fix bankhistory books not showing correct final balance.
    - Closes #5269.
  - Fix typos in TownyFormatter, courtesy of LudwigHornslied with PR #5270.
  - Fix missing tabcomplete for /res jail paybail.
  - Fix nation merging not performing optional proximity test.
  - Add Resident#isOnline, courtesy of Warriorrrr with PR #5273.
  - Prevent empty messages from being sent, courtesy of Warriorrrr with PR #5272.
  - Bump language files to 0.122.
  - New Language added to Crowdin: Vietnamese.
  - Update maven-shade-plugin to a version which supports Java 16.