@@ -1702,7 +1702,7 @@ public final class TownyFlatFileSource extends TownyDatabaseHandler {
 				tokens = line.split(",");
 				TownBlock tb = null;
 				try {
-					tb = TownyUniverse.getInstance().getTownBlock(new WorldCoord(tokens[0], Integer.parseInt(tokens[1]), Integer.parseInt(tokens[2])));
+					tb = TownyUniverse.getInstance().getTownBlock(new WorldCoord(tokens[0], Integer.parseInt(tokens[1].trim()), Integer.parseInt(tokens[2].trim())));
 					jail.setTownBlock(tb);
 					jail.setTown(tb.getTown());
 					tb.setJail(jail);
